# weather_pipeline

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml  pyproject.toml  run.py
code/: down.json  ecmwf_down.py  forecast_api.py  forecast_wave.py  forecast_wind.py
config/: down.json  settings.toml
docs/: Project_Plan.md
monitoring/: app.py
scheduler/: pipeline_task.xml  run_pipeline.bat
scripts/: check_forecast_vars.py  test_noaa_erddap.py  test_wind_ocean_filter.py
specs/: db_schema.md  ecmwf_forecast.md  ecmwf_reanalysis.md  hycom_forecast.md  pipeline_state_management.md
src/env_pipeline/: __init__.py  pipeline.py
src/env_pipeline/db/: __init__.py  connection.py  coverage.py  loader.py  schema.py
src/env_pipeline/ecmwf/: __init__.py  ecmwf_forecast_downloader.py  era5_downloader.py
src/env_pipeline/hycom/: __init__.py  hycom_downloader.py  hycom_forecast_downloader.py
src/env_pipeline/noaa/: noaa_forecast_downloader.py
